--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,3 +7,17 @@
   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
   <body>
+    <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">YelpCamp</a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/">Log In</a></li>
+          <li><a href="/">Sign Up</a></li>
+          <li><a href="/">Log out</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
