--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,9 @@
         <div class="caption">
           <h4><%= campground.name %></h4>
         </div>
+        <p>
+          <a class="btn btn-primary" href="/campgrounds/<%= campground._id %>">More info</a>
+        </p>
       </div>
     </div>
   <%})%>
