--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,4 +5,11 @@
 <img src="<%= campground.image %>">
 
 <p><%= campground.description %></p>
+
+<% campground.comments.forEach((comment) => { %>
+  <p>
+    <strong><%= comment.author %></strong> - <%= comment.text %>
+  </p>
+<% }) %>
+
 <% include partials/footer %>
