Styled show page

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -11,21 +11,21 @@
     </div>
   </header>
 
-<div class="row text-center" style="display: flex; flex-wrap: wrap;">
-  <%campgrounds.forEach((campground) => { %>
-    <div class="col-md-3 col-sm-6">
-      <div class="thumbnail">
-        <img src="<%= campground.image %>">
-        <div class="caption">
-          <h4><%= campground.name %></h4>
+  <div class="row text-center" style="display: flex; flex-wrap: wrap;">
+    <%campgrounds.forEach((campground) => { %>
+      <div class="col-md-3 col-sm-6">
+        <div class="thumbnail">
+          <img class="small-thumb" src="<%= campground.image %>">
+          <div class="caption">
+            <h4><%= campground.name %></h4>
+          </div>
+          <p>
+            <a class="btn btn-primary" href="/campgrounds/<%= campground._id %>">More info</a>
+          </p>
         </div>
-        <p>
-          <a class="btn btn-primary" href="/campgrounds/<%= campground._id %>">More info</a>
-        </p>
       </div>
-    </div>
-  <%})%>
-</div>
+    <%})%>
+  </div>
 </div>
 
 <% include ../partials/footer %>
