--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,19 +1,43 @@
 <% include ../partials/header %>
 
-<h1><%= campground.name %></h1>
-
-<img src="<%= campground.image %>">
-
-<p><%= campground.description %></p>
-
-<p>
-  <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add new comment</a>
-</p>
-
-<% campground.comments.forEach((comment) => { %>
-  <p>
-    <strong><%= comment.author %></strong> - <%= comment.text %>
-  </p>
-<% }) %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <p class="lead">YelpCamp</p>
+      <div class="list-group">
+        <li class="list-group-item active">List group 1</li>
+        <li class="list-group-item">List group 2</li>
+        <li class="list-group-item">List group 3</li>
+        <li class="list-group-item">List group 4</li>
+        <li class="list-group-item">List group 5</li>
+      </div>
+    </div>
+    <div class="col-md-9">
+      <div class="thumbnail">
+        <img src="<%= campground.image %>" alt="campground image" class="img-responsive">
+        <div class="caption caption-full">
+          <h4 class="pull-right">£49.00/night</h4>
+          <h4><a href=""><%= campground.name %></a></h4>
+          <p><%= campground.description %></p>
+        </div>
+      </div>
+      <div class="well">
+        <div class="text-right">
+          <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add new comment</a>
+        </div>
+        <hr>
+        <% campground.comments.forEach((comment) => { %>
+          <div class="row">
+            <div class="col-md-12">
+              <strong><%= comment.author %></strong>
+              <span class="pull-right">10 days ago</span>
+              <p><%= comment.text %></p>
+            </div>
+          </div>
+        <% }) %>
+      </div>
+    </div>
+  </div>
+</div>
 
 <% include ../partials/footer %>
