--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,9 +15,13 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/">Log In</a></li>
-          <li><a href="/">Sign Up</a></li>
-          <li><a href="/">Log out</a></li>
+        <% if (!currentUser) { %>
+          <li><a href="/register">Sign Up</a></li>  
+          <li><a href="/login">Log In</a></li>
+        <% } else { %>
+          <li><a> Signed in as: <strong><%= currentUser.username %></strong> </a></li>
+          <li><a href="/logout">Log out</a></li>
+        <% } %>
         </ul>
       </div>
     </div>
