--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -19,6 +19,7 @@
           <h4 class="pull-right">£49.00/night</h4>
           <h4><a href=""><%= campground.name %></a></h4>
           <p><%= campground.description %></p>
+          <p><em>Added by: <%= campground.author.username %></em></p>
         </div>
       </div>
       <div class="well">
