--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -24,7 +24,7 @@
           </p>
           <% if (currentUser && campground.author.id.equals(currentUser._id)) { %>
             <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-            <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
+            <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
               <button class="btn btn-xs btn-danger">Delete</button>
             </form>
           <% } %>
@@ -41,6 +41,10 @@
               <strong><%= comment.author.username %></strong>
               <span class="pull-right">10 days ago</span>
               <p><%= comment.text %></p>
+              <a href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit" class="btn btn-xs btn-warning">Edit</a>
+              <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="post">
+                <input class="btn btn-danger btn-xs" type="submit" value="Delete">
+              </form>
             </div>
           </div>
         <% }) %>
